# RustyFileTransfer

./: Cargo.toml  README.md
lib/: thread_pool.rs
rusty_file_transfer/: Cargo.toml  Game Soundtrack Downloader (Python 3).py
rusty_file_transfer/src/: main.rs
src/: main.rs
