[package]
name = "rusty_file_transfer"
version = "0.1.0"
authors = ["Aaron Tabor <Shoggoth269@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[lib]
name = "thread_pool"
path = "lib/thread_pool.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
# text_io = "0.1.8"
serde = { version = "1.0.110", features = ["derive"] }
bincode = "1.2.1"